# HydroPortal

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-ci.in  requirements-ci.txt
.github/workflows/: ci.yml
backend/: __init__.py  app.py  config.py  db.py  deps.py  logging_config.py  models.py  plugin_discovery.py  repositories.py
backend/middleware/: __init__.py  auth_middleware.py  cors.py  rate_limit.py
backend/routers/: __init__.py  _proxy.py  apps.py  arena.py  auth.py  design.py  edu.py  gateway.py  guard.py  lab.py
backend/ws/: scada_stream.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ErrorBoundary.jsx  Layout.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/hooks/: useAuth.js  useAuth.test.jsx  useWebSocket.js  useWebSocket.test.js
frontend/src/pages/: ArenaPanel.jsx  Dashboard.jsx  DesignPanel.jsx  EduPanel.jsx  GuardPanel.jsx  LabPanel.jsx  Login.jsx  Login.test.jsx  Settings.jsx
frontend/src/store/: useAppStore.js  useAppStore.test.js
tests/: conftest.py  test_auth.py  test_gateway.py  test_integration.py  test_rate_limit.py  test_websocket.py
tests/test_backend/: test_apps.py  test_auth.py  test_capabilities.py  test_config.py  test_discovery.py  test_domain_proxy.py  test_gateway.py  test_gateway_smoke.py  test_rate_limit.py  test_websocket.py
tests/test_frontend/: README.md
